--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 <body>
   <!-- Primera pantalla para seleccionar el tipo de estructura -->
   <div class="container" id="pantalla1">
-    <h1>Bienvenido</h1>
+    <h1>¡Bienvenido!</h1>
     <h2>Escoja el tipo de estructura de datos</h2>
     <button class="pilab" onclick="mostrarPila()">Pila</button>
   </div>
