--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       width: 500px;
     }
 
-    .pilab button {
+    .pilab {
       padding: 10px;
       border-radius: 10px;
       background-color: #092a4d;
