--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <input type="text" id="value" placeholder="Ingrese un número (1-99)">
       <button onclick="insertar()">Insertar</button>
       <button onclick="eliminar()">Eliminar</button>
-      <button id="togglePila" onclick="toggleMostrarPila()">Mostrar Pila</button>
+      <button id="togglePila" onclick="toggleMostrarPila()">Mostrar</button>
     </div>
     <div class="output" id="output-pila">
       <h2>Estado de la Pila:</h2>
