--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
     <h1>¡Bienvenido!</h1>
     <h2>Escoja el tipo de estructura de datos</h2>
     <button class="pilab" onclick="mostrarPila()">Pila</button>
+    <h4>Integrante: Onel Baloy</h4>
   </div>
 
   <!-- Segunda pantalla que contiene la pila -->
